Package limma nodig om een PCA-plot te genereren.

--- a/ProjectCourse6.Rmd
+++ b/ProjectCourse6.Rmd
@@ -16,7 +16,7 @@ Met een klein beetje CSS, in het HTML Markdown de kolommen verkorten
 
 ```{r packagesLaden, include = FALSE}
 require(edgeR)
-#require(limma)
+require(limma)
 #require(stats)
 #require(dplyr)
 require(ggplot2)
